# ftw-baselines

./: .flake8  .gitignore  .pre-commit-config.yaml  2  CHANGELOG.md  CHANGELOGS.md  CLAUDE.md  EXPERIMENTS.md  LICENSE  ORIGINAL_README.md  README.md  config.yaml  download_imagery.py  env.yml  files_to_download.txt  inference.py  main.py  pixi.toml  plan.md  pyproject.toml  requirements-delineate.txt  requirements-dev.txt  requirements.txt  test.py
.claude/: settings.local.json
.github/workflows/: integration-tests.yml  publish.yml  pytest.yml  tests.yml
assets/global_crop_calendar/: sc_eos_3x3_v2_cog.tiff  sc_sos_3x3_v2_cog.tiff  wc_eos_3x3_v2_cog.tiff  wc_sos_3x3_v2_cog.tiff
configs/: example_config.yaml
configs/FTW-25-Experiments-1-1/: experiment-1-1.1.yaml  experiment-1-1.2.yaml  experiment-1-1.3.yaml  experiment-1-1.4.yaml  run_eval.py  run_experiments.py
configs/FTW-25-Experiments-1-2/: experiment-1-2.yaml  run_eval.py  run_experiments.py
configs/FTW-25-Experiments-1-3/: exp1_3_spectral_RGB.yaml  exp1_3_temporal_median.yaml  exp1_3_temporal_stacked.yaml  exp1_3_temporal_windowA.yaml  exp1_3_temporal_windowB.yaml  run_eval.py  run_experiments.py
configs/FTW-25-Experiments-2-1/: experiment-2-1.1.yaml  experiment-2-1.2.yaml  experiment-2-1.3.yaml  run_eval.py  run_experiments.py  run_finetuning_experiments.py
configs/FTW-25-Experiments-2-1/finetuning/: experiment-2-1.1_finetuning.yaml  experiment-2-1.2_finetuning.yaml  experiment-2-1.3_finetuning.yaml
configs/FTW-25-Experiments-2-2/: experiment-2-2.1.yaml  experiment-2-2.2.yaml  experiment-2-2.3.yaml  run_eval.py  run_experiments.py  run_finetuning_experiments.py
configs/FTW-25-Experiments-2-2/finetuning/: experiment-2-2.1_finetuning.yaml  experiment-2-2.2_finetuning.yaml  experiment-2-2.3_finetuning.yaml
configs/FTW-25-Experiments-3/: experiment-3-3.yaml  experiment-3-4.yaml  experiment-3-5.yaml  run_experiments.py  run_finetuning_experiments.py
configs/FTW-25-Experiments-3/finetuning/: experiment-3-1_finetuning.yaml  experiment-3-2_finetuning.yaml  experiment-3-3_finetuning.yaml  experiment-3-4_finetuning.yaml  experiment-3-5_finetuning.yaml
configs/FTW-Release/: run_eval.py  run_experiments.py
configs/FTW-Release/3_class/: full-ftw.yaml
configs/dwei/: dev.yaml  wandb_sweep.yaml
configs/dwei/3_class/: ftw-pure.yaml  full-ftw.yaml
configs/release/: check_middle_sensitivity.py  run_consensus_parallel.py  run_eval.py  run_eval_parallel.py  run_experiments.py
configs/release/2_class/: cc-by-ftw.yaml  full-ftw.yaml
configs/release/3_class/: cc-by-ftw.yaml  full-ftw.yaml
configs/release/prue/: prue_efnet3-ccby.yaml  prue_efnet3.yaml  prue_efnet3_standardweight.yaml  prue_efnet5-ccby.yaml  prue_efnet5.yaml  prue_efnet5_standardweight.yaml  prue_efnet7-ccby.yaml  prue_efnet7.yaml  prue_efnet7_standardweight.yaml  prue_logcoshdice_only.yaml
ftw_tools/: cli.py  cli_models.py  parquet_utils.py  settings.py  utils.py
ftw_tools/download/: crop_calendar.py  download_ftw.py  download_img.py  http.py  io.py
ftw_tools/inference/: inference.py  model_registry.py  models.py  utils.py
ftw_tools/models/: baseline_eval.py  baseline_inference.py  delineate_anything.py  model_registry.py  utils.py
ftw_tools/postprocess/: lulc_filtering.py  metrics.py  polygonize.py  watershed_polygonize.py
ftw_tools/torchgeo/: datamodules.py  datasets.py  losses.py  models.py  trainers.py
ftw_tools/training/: datamodules.py  datasets.py  eval.py  losses.py  models.py  trainers.py  utils.py
notebooks/: eda_utils.py  pca_investigation.ipynb  super-resolve.py  visualize_results.ipynb
notebooks/outputs/: grid_chips_map.html
scripts/: add_edges_to_dataset.py  build_dependencies.nu  dev_run.py  dev_run.sh  download_source_coop.py  ftw_model_fit.py
src/: datasets.py  metrics.py  trainers.py  utils.py
src/ftw/: __init__.py  cli.py  datamodules.py  datasets.py  download_dataset.py  metrics.py  trainers.py  utils.py
src/ftw/models/: delineate_anything.py
src/ftw_cli/: __init__.py  cfg.py  cli.py  compute_band_stats.py  download.py  download_ftw.py  download_img.py  inference.py  lulc_filtering.py  model.py  polygonize.py  types.py  unpack.py
src/scratch/: ftw_to_coco.py
src/tests/: test_data.py  test_help.py  test_inference.py  test_model.py  test_models.py  test_utils.py
src/tests/data-files/: inference-img.tif  min_config.yaml
tests/: conftest.py  test_crop_calendar.py  test_data.py  test_download_img.py  test_eval.py  test_help.py  test_http.py  test_inference.py  test_merge_adjacent.py  test_model.py  test_model_registry.py  test_models.py  test_utils.py
tests/data-files/: mask.tif  min_config.yaml
