[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "ftw-tools"
version = "2.0.0"
description = "Fields of The World (FTW) Command Line Interface (CLI) for data management, ML processing, and more."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Hannah Kerner", email = "hkerner@asu.edu" },
  { name = "Matthias Mohr", email = "matthias@mohr.ws" },
  { name = "Caleb Robinson", email = "Caleb.Robinson@microsoft.com" },
  { name = "Aninda Ghosh", email = "aghosh57@asu.edu" },
  { name = "Chris Holmes", email = "cholmes@tgengine.org" },
  { name = "Snehal Chaudhari", email = "sschaud5@asu.edu" },
]

requires-python = ">=3.11,<3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.2.1,<9",
  "dask[distributed]>=2025.5.1",
  "fiboa-cli==0.7",
  "fiona>=1.9,<2",
  "geopandas>=0.14,<2",
  "kornia>=0.7,<1",
  "lightning>=2,<2.6",
  "matplotlib>=3.7,<4",
  "notebook>=7,<8",
  "numpy>=1.24,<3",
  "odc-stac>=0.4,<1",
  "planetary-computer>=1,<2",
  "pyarrow==16.1",
  "pyproj>=3.6,<4",
  "pystac>=1.8,<2",
  "pyyaml>=6,<7",
  "rasterio>=1.3,<2",
  "rioxarray>=0.15,<1",
  "scikit-image>=0.25.2,<2",
  "scipy>=1.11,<2",
  "tenacity>=9.1.2,<10",
  "tensorboard>=2.15,<3",
  "torch>=2.4,<2.9",
  "torchgeo>=0.7,<1",
  "torchvision>=0.19,<0.23",
  "tqdm>=4.65,<5",
]
optional-dependencies.all = [
  "ftw-tools[delineate-anything,dev]",
]
optional-dependencies.delineate-anything = [
  "ultralytics>=8.3.187,<9",
]
optional-dependencies.dev = [
  "build",
  "hatchling",
  "pre-commit>=4,<=5",
  "pytest>=7.4,<9",
  "ruff>=0.1,<1",
]
urls.Changelog = "https://github.com/fieldsoftheworld/ftw-baselines/blob/main/CHANGELOG.md"
urls.Homepage = "https://fieldsofthe.world/"
urls.Issues = "https://github.com/fieldsoftheworld/ftw-baselines/issues"
urls.Repository = "https://github.com/fieldsoftheworld/ftw-baselines.git"
scripts.ftw = "ftw_tools.cli:ftw"

[tool.ruff]
extend-exclude = [ "*.ipynb" ]

[tool.pytest.ini_options]
pythonpath = [ "." ]
