[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "ftw-tools"
version = "2.0.0b5"
description = "Fields of The World (FTW) Command Line Interface (CLI) for data management, ML processing, and more."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Hannah Kerner" },
  { name = "Matthias Mohr" },
  { name = "Caleb Robinson" },
  { name = "Aninda Ghosh" },
  { name = "Chris Holmes", email = "cholmes@tgengine.org" },
  { name = "Snehal Chaudhari" },
  { name = "Isaac Corley" },
  { name = "Jeff Albrecht" },
  { name = "Martha Morrissey" }
]
requires-python = ">=3.12,<3.15"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "click>=8.2.1,<9",
  "dask[distributed]>=2025.5.1",
  "fiboa-cli>=0.21,<0.22",
  "fsspec[http]>=2025.7,<2026",
  "geopandas>=1,<2",
  "kornia>=0.8.2,<0.9",
  "lightning>=2,<2.6",
  "matplotlib>=3.7,<4",
  "notebook>=7,<8",
  "numpy>=1.24,<3",
  "odc-stac>=0.5,<1",
  "planetary-computer>=1,<2",
  "pyarrow>=21,<24",
  "pyproj>=3.6,<4",
  "pystac>=1.8,<2",
  "pyyaml>=6,<7",
  "rasterio>=1.3,<2",
  "rioxarray>=0.15,<1",
  "rtree>=1,<2",
  "scikit-image>=0.25.2,<2",
  "scipy>=1.11,<2",
  "tenacity>=9.1.2,<10",
  "tensorboard>=2.15,<3",
  "torch>=2.2,<3",
  "torchgeo>=0.9,<1",
  "torchvision>=0.17,<0.26",
  "tqdm>=4.65,<5",
]
optional-dependencies.all = [ "ftw-tools[delineate-anything,dev]" ]
optional-dependencies.delineate-anything = [ "ultralytics>=8.3.187,<9" ]
optional-dependencies.dev = [
  "build",
  "hatchling",
  "pre-commit>=4,<=5",
  "pytest>=7.4,<9",
  "pytest-xdist>=3.8,<4",
  "ruff>=0.1,<1",
  "twine",
]
urls.Changelog = "https://github.com/fieldsoftheworld/ftw-baselines/blob/main/CHANGELOG.md"
urls.Homepage = "https://fieldsofthe.world/"
urls.Issues = "https://github.com/fieldsoftheworld/ftw-baselines/issues"
urls.Repository = "https://github.com/fieldsoftheworld/ftw-baselines.git"
scripts.ftw = "ftw_tools.cli:ftw"

[tool.ruff]
extend-exclude = [ "*.ipynb" ]
fix = true
format.quote-style = "double"
format.skip-magic-trailing-comma = true
lint.isort.split-on-trailing-comma = false

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203" ]
exclude = [ "data/", ".git/" ]

[tool.pytest]
ini_options.norecursedirs = [ ".ipynb_checkpoints", "data", "__pycache__" ]
ini_options.pythonpath = [ "." ]
ini_options.testpaths = [ "tests" ]
ini_options.tmp_path_retention_count = 1
ini_options.tmp_path_retention_policy = "failed"
ini_options.markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
ini_options.addopts = '-m "not integration" -n auto'
